--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,13 @@
 language: php
 php:
   - '7.0'
+  - '7.1'
+env:
+  matrix:
+    - PREFER_LOWEST="--prefer-lowest"
+    - PREFER_LOWEST=""
 before_script:
-  - composer update --prefer-dist --prefer-stable
+  - composer update --prefer-dist $PREFER_LOWEST
 script:
   - mkdir -p build/logs
   - phpunit --coverage-clover build/logs/clover.xml
