--- a/composer.json
+++ b/composer.json
@@ -15,14 +15,15 @@
         }
     },
     "require": {
-        "php": ">=7.0.0",
-        "illuminate/support": "~5.2",
-        "illuminate/database": "~5.2"
+        "php": ">=7.2.0",
+        "ext-json": "*",
+        "illuminate/support": "^5.6|^6.0",
+        "illuminate/database": "^5.6|^6.0"
     },
     "require-dev": {
-        "orchestra/testbench": "~3.2",
-        "phpunit/phpunit": "~5.7",
-        "satooshi/php-coveralls": "^1.0.1"
+        "orchestra/testbench": "^3.3|^4.0",
+        "phpunit/phpunit": "^8.0",
+        "php-coveralls/php-coveralls": "^2.1"
     },
     "autoload-dev":{
         "classmap": ["tests/"]
