--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,12 @@
     "require": {
         "php": ">=7.2.0",
         "ext-json": "*",
-        "illuminate/support": "^5.6|^6.0",
-        "illuminate/database": "^5.6|^6.0"
+        "illuminate/support": "^5.6|^6.0|^7.0",
+        "illuminate/database": "^5.6|^6.0|^7.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^3.3|^4.0",
-        "phpunit/phpunit": "^8.0",
+        "orchestra/testbench": "^3.3|^4.0|^5.0",
+        "phpunit/phpunit": "^8.0|^9.0",
         "php-coveralls/php-coveralls": "^2.1"
     },
     "autoload-dev":{
