--- a/composer.json
+++ b/composer.json
@@ -15,14 +15,15 @@
         }
     },
     "require": {
-        "php": ">=7.2.0",
+        "php": ">=7.3.0",
         "ext-json": "*",
-        "illuminate/support": "^5.6|^6.0|^7.0",
-        "illuminate/database": "^5.6|^6.0|^7.0"
+        "illuminate/support": "^6.0|^7.0|^8.0",
+        "illuminate/database": "^6.0|^7.0|^8.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^3.3|^4.0|^5.0",
-        "phpunit/phpunit": "^8.0|^9.0",
+        "laravel/legacy-factories": "^1.0.4",
+        "orchestra/testbench": "^4.0|^5.0|^6.0",
+        "phpunit/phpunit": "^8.2.4|^9.0",
         "php-coveralls/php-coveralls": "^2.1"
     },
     "autoload-dev":{
