--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,8 @@
         "laravel/legacy-factories": "^1.0.4",
         "orchestra/testbench": "^5.9|^6.6",
         "phpunit/phpunit": "^9.5",
+        "guzzlehttp/guzzle": "^7.2",
+        "guzzlehttp/promises": "^1.4",
         "mockery/mockery": "^1.4.2",
         "php-coveralls/php-coveralls": "^2.4.2"
     },
