Adjust CI settings
We require sqlite >3.24 for upsert functionality, but ubuntu 18.04 (ubuntu-latest) only has 3.22.
php7.3 does not seem to bind the sqlite driver correctly on 20.04. Since it is no longer actively supported, we are removing it.

Also, fix security advisory in laravel/database version

--- a/.github/workflows/automated-test.yml
+++ b/.github/workflows/automated-test.yml
@@ -2,10 +2,10 @@ name: PHPUnit Tests
 on: [push]
 jobs:
   phpunit:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     strategy:
       matrix:
-        php-versions: ['7.3', '7.4', '8.0']
+        php-versions: ['7.4', '8.0']
         prefer-lowest: ['','--prefer-lowest']
     name: PHP ${{ matrix.php-versions }} ${{ matrix.prefer-lowest }}
     steps:
